--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ plainwhite:
 # Build settings
 theme: plainwhite
 
+remote_theme: samarsault/plainwhite-jekyll
+
 plugins:
   - jekyll-seo-tag
 #  - jekyll-feed
