--- a/_config.yml
+++ b/_config.yml
@@ -61,9 +61,8 @@ plainwhite:
 # - about.md
 
 # Build settings
-theme: plainwhite
-
 remote_theme: samarsault/plainwhite-jekyll
+# theme: plainwhite
 
 plugins:
   - jekyll-seo-tag
