config: 다크모드 고정 및 설정 변경

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: LaeWoong
+author: wlroh
+email: wlroh.paul@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -11,10 +11,10 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
+  name: LaeWoong
   # tagline: Developer. Designer
   tagline: |
-    Developer 개발자
+    Developer
 
     테스트 중입니다.
   date_format: "%b %-d, %Y"
@@ -22,7 +22,7 @@ plainwhite:
   search: true # set to true to enable searchbar
   dark_mode: true # set to true to add dark mode toggle
   portfolio_image: "assets/portfolio.png" # the path from the base directory of the site to the image to display (no / at the start)
-  html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
+  html_lang: "KR" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
   condensed_mobile:
     #- home
     - page
@@ -30,7 +30,7 @@ plainwhite:
   # generate social links in footer
   social_links:
     #twitter: samarsault
-    github: samarsault
+    github: wlroh
     #linkedIn: in/samarsault
     #dribbble: jekyll
     #flickr:   jekyll
@@ -41,7 +41,7 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    email: jekyll
+    email: wlroh.paul@gmail.com
 
     # Mastodon instances
     # mastodon:
