docs: 이력서 페이지 초기 골격 추가

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,17 @@ description: > # this means to ignore newlines until "show_exerpts:"
 show_excerpts: true # set to true to show excerpts on the homepage
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+
+# Resume Config
+website: https://wlroh.github.io
+# website_title: Web (Website title override)
+
+# Dark Mode (true/false/never)
+darkmode: true
+github_username: wlroh
+name: 노웅래
+# END Resume Config
+
 sass:
   sass_dir: _sass
 plainwhite:
