--- a/_config.yml
+++ b/_config.yml
@@ -9,34 +9,22 @@ show_excerpts: true # set to true to show excerpts on the homepage
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 
-# Resume Config
-website: https://wlroh.github.io
-# website_title: Web (Website title override)
-
-# Dark Mode (true/false/never)
-darkmode: true
-github_username: wlroh
-name: 노웅래
-# END Resume Config
-
 sass:
   sass_dir: _sass
 plainwhite:
   name: LaeWoong
-  # tagline: Developer. Designer
-  tagline: Developer
+  tagline: Backend Developer
   intro: |
     목표를 위해 시스템을,
 
     시스템을 위해 회고를
   date_format: "%b %-d, %Y"
-  sitemap: true # set to true to generate sitemap.xml content
-  search: true # set to true to enable searchbar
-  dark_mode: true # set to true to add dark mode toggle
-  portfolio_image: "assets/images/portfolio.png" # the path from the base directory of the site to the image to display (no / at the start)
-  html_lang: "KR" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
+  sitemap: true
+  search: true
+  dark_mode: true
+  portfolio_image: "assets/images/portfolio.png"
+  html_lang: "KR"
   condensed_mobile:
-    #- home
     - page
     - post
     - category_archive
@@ -45,14 +33,8 @@ plainwhite:
     #twitter: samarsault
     github: wlroh
     #linkedIn: in/samarsault
-    #dribbble: jekyll
-    #flickr:   jekyll
     #instagram: jekyll
-    #pinterest: jekyll
-    #youtube: jekyll
     #facebook: jekyll
-    #soundcloud: jekyll
-    #telegram: jekyll
     #gitlab: jekyll
     email: wlroh.paul@gmail.com
 
@@ -74,6 +56,47 @@ plainwhite:
 # this and add the path to the pages in order as they should show up
 #header_pages:
 # - about.md
+
+# --------------------------------------  Resume Config  --------------------------------------
+
+# Site
+repository: wlroh/wlroh.github.io
+
+# Content configuration version
+version: 2
+
+# Personal info
+resume_name: 노웅래
+resume_title: Backend Developer
+resume_email: wlroh.paul@gmail.com
+website: https://wlroh.github.io
+
+# Dark Mode (true/false/never)
+darkmode: true
+
+# Social links
+#twitter_username: jekyllrb
+github_username: wlroh
+#facebook_username: jekyll
+#linkedin_username: jekyll
+#googlescholar_username: D847cGsAAAAJ
+
+# Google Analytics and Tag Manager
+# Using more than one of these may cause issues with reporting
+# gtm: "GTM-0000000"
+# gtag: "UA-00000000-0"
+# google_analytics: "UA-00000000-0"
+
+# About Section
+about_profile_image: assets/images/paul1.jpeg
+about_content: |
+  3년차 개발자로 창업과 중소기업에서 웹과 앱 서비스를 기획/개발/배포/운영하였습니다. 주로 웹 서비스, Restful API 개발을 담당했으며, 개발은 혼자하는 것이 아닌 함께 만들어간다고 생각하여 능동적이고 적극적으로 팀과 <mark>소통</mark>하며 진행합니다.
+  <br/><br/>
+  고객들에게 더 좋은 가치를 제공하기 위해서는 <mark>서비스 품질</mark>이 중요하다고 생각합니다. 서비스 품질을 위해 어떻게 하면 더 좋은 코드를 작성할 수 있을지 고민하며 새로운 프레임워크, 기술, 패러다임 등의 skill set들이 왜 사용되는지 이해하고, 어떤 방법이 현재 상황에 더 적합한지 고민하고 적용하려 합니다.
+  <br/><br/>
+  1일 1커밋이라는 시스템을 통해 계속 <mark>성장</mark>하고 있습니다. 성장이라는 목표를 이루기 위해 시스템을 만들고, 시스템을 유지하기 위해 회고를 하려고 노력합니다.
+
+# -------------------------------------- END Resume Config  --------------------------------------
 
 # Build settings
 remote_theme: samarsault/plainwhite-jekyll
