fix: 이력서 내용 수정

--- a/_data/resume/other-experience.yml
+++ b/_data/resume/other-experience.yml
@@ -13,7 +13,7 @@
       title: 소리보기 창업 활동
       caption: 2016.09 ~ 2019.08
       description: | # this will include new lines to allow paragraphs
-        * (주)소리보기 창립멤버로 스타트업을 운영한 경험이 있습니다. 활동 기간동안 웹어플리케이션, API 서버, 안드로이드 앱 개발을 진행했으며 다양한 지원사업 및 베타 서비스 런칭 등의 경험이 있습니다.
+        * (주)소리보기 창립멤버 및 대표로 스타트업을 운영한 경험이 있습니다. 활동 기간동안 웹어플리케이션, API 서버, 안드로이드 앱 개발을 진행했으며 다양한 지원사업 및 베타 서비스 런칭 등의 경험이 있습니다.
 
         * 사운드를 통해 영상 콘텐츠를 인식해 자동으로 자막을 송출해주는 서비스와 스타벅스 사이렌 오더와 비슷한 플랫폼 서비스를 개발하였습니다.
 
