--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,9 @@ github_username: wlroh
 # About Section
 about_profile_image: assets/images/paul1.jpeg
 about_content: |
-  3년차 개발자로 창업과 중소기업에서 웹과 앱 서비스를 기획/개발/배포/운영하였습니다. 주로 웹 서비스, Restful API 개발을 담당했으며, 개발은 혼자하는 것이 아닌 함께 만들어간다고 생각하여 능동적이고 적극적으로 팀과 <mark>소통</mark>하며 진행합니다.
+  3년차 개발자로 웹과 앱 서비스를 기획/개발/배포/운영하였습니다. 주로 웹 서비스, Restful API 개발을 담당했으며, 개발은 혼자하는 것이 아닌 함께 만들어간다고 생각하여 능동적이고 적극적으로 팀과 <mark>소통</mark>하며 진행합니다.
   <br/><br/>
-  고객들에게 더 좋은 가치를 제공하기 위해서는 <mark>서비스 품질</mark>이 중요하다고 생각합니다. 서비스 품질을 위해 어떻게 하면 더 좋은 코드를 작성할 수 있을지 고민하며 새로운 프레임워크, 기술, 패러다임 등의 skill set들이 왜 사용되는지 이해하고, 어떤 방법이 현재 상황에 더 적합한지 고민하고 적용하려 합니다.
+  고객들에게 더 좋은 가치를 제공하기 위해서는 <mark>서비스 품질</mark>과 <mark>빠른 요구사항 반영</mark>이 중요하다고 생각합니다. 이를 위해 어떻게 하면 더 좋은 코드를 작성할 수 있을지 고민하고 테스트코드 작성과 리팩토링하며 새로운 프레임워크, 기술, 패러다임 등의 skill set들이 왜 사용되는지 이해하고, 더 좋은 방법들을 적용하고 있습니다.
   <br/><br/>
   1일 1커밋이라는 시스템을 통해 계속 <mark>성장</mark>하고 있습니다. 성장이라는 목표를 이루기 위해 시스템을 만들고, 시스템을 유지하기 위해 회고를 하려고 노력합니다.
 
