docs: about me / work-experience 내용 수정

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -43,7 +43,7 @@
           duration: 2020.04 ~ 현재
           description: 스마트오피스 솔루션 중 가상화 데스크톱(DV)은 삼성 Dex 서비스와 같이 가상 데스크톱을 클라우드 기반으로 제공하는 서비스입니다.
           what_did_I_do: |
-            * 기존 사용자 포탈의 경우 담당자가 없어 운영이 중단된 서비스를 개선하여 런칭 및 유지보수
+            * 운영이 중단된 사용자포탈 서비스를 이슈 수정 및 추가 요구사항 개발하여 재런칭 및 유지보수
 
             * SMS, 2Factor 인증 앱, 카카오 등을 통해 2Factor 인증 기능 구현
 
