--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,11 @@ plainwhite:
     - title: Categories
       url: "/categories"
 
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+#header_pages:
+# - about.md
+
 # --------------------------------------  Resume Config  --------------------------------------
 
 # Site
