docs: work-experience subtitle 수정
분리가 안되어 가독성이 안좋아 수정함.

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -5,7 +5,7 @@
       left_area_vertical_align: top
       title: 유플렉스소프트
       sub_title: |
-        Java/Node.js 웹 어플리케이션 개발자
+        Java/Node.js 웹 어플리케이션 개발자<br/>
         산업기능요원 복무
       caption: 2019.09 ~ 현재
       quote: >
