--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -21,6 +21,10 @@
 
             * 로그인 및 권한 관리 기능 구현
 
+            * 다국어 정보와 개인별로 구성한 커스텀 정보를 개인화설정값을 통해 다국어 및 커스텀용어 제공하는 API 구현
+
+            * 푸시메시지, 이메일, 팀즈 메시지 API 구현 및 비동기 처리
+
             * 요구사항의 변경이 자주 발생할 여지가 있어 테스트 코드를 작성하며 기능 변경에도 유연하게 진행할 수 있도록 개발
           tech_stack: Java, Spring MVC, Mybatis, Junit4, Resin, MSSQL
 
