--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -17,15 +17,19 @@
           what_did_I_do: |
             * Task 생성, 업데이트, 선후행 관계 제어 등 모든 업무들을 관리하는 워크플로우 Restful API 설계 및 개발
 
-            * 공통 UI 작업과 업무 진척관리를 위한 화면 구현
+            * 로그인 구현 및 다른 개발자분들이 로그인한 유저 정보를 쉽게 사용할 수 있도록 어노테이션 구현
 
-            * 로그인 및 권한 관리 기능 구현
+            * 유저별 권한 기능 구현 및 인터셉터 이용해 유저별 동적 메뉴 구성 구현
 
-            * 다국어 정보와 개인별로 구성한 커스텀 정보를 개인화설정값을 통해 다국어 및 커스텀용어 제공하는 API 구현
+            * 생산성 향상 및 가독성, 안정성을 위해 조건문을 통한 유효성 검증을 어노테이션을 통한 유효성 검증으로 변경 및 Object Mapping 라이브러리 적용
 
             * 푸시메시지, 이메일, 팀즈 메시지 API 구현 및 비동기 처리
 
-            * 요구사항의 변경이 자주 발생할 여지가 있어 테스트 코드를 작성하며 기능 변경에도 유연하게 진행할 수 있도록 개발
+            * 다국어 정보와 개인별로 구성한 커스텀 정보를 개인화설정값을 통해 다국어 및 커스텀용어 제공하는 API 구현
+
+            * 공통 UI 작업과 업무 진척관리를 위한 화면 구현
+
+            * 애자일 방식으로 진행되어 요구사항의 변경이 자주 발생할 여지가 있어 테스트 코드를 작성하며 기능 변경에도 유연하게 진행할 수 있도록 개발
           tech_stack: Java, Spring MVC, Mybatis, Junit4, Resin, MSSQL
 
         - name: 화상회의 서비스
@@ -34,13 +38,15 @@
           what_did_I_do: |
             * 혼자서 화상회의 신규 서비스를 기획, 설계, 개발, 운영 중이며, 현재 100여개의 기업에서 화상회의 서비스를 이용
 
-            * 각각의 고객사 관리자들이 사용자관리, 이력관리 등 시스템을 관리할 수 있도록 어드민 기능 구현
+            * WebRTC 관련 오픈소스를 분석 및 커스터마이징하여 화상회의 서비스 설계 및 개발
 
-            * 고객사에서 Saas Service 관리 포탈을 통해 쉽게 화상회의 서비스 이용권한을 제공하기 위해 화상회의 서비스 연동 API 설계 및 개발
+            * 각각의 고객사 관리자들이 사용자관리, 이력관리 등 시스템을 관리할 수 있도록 어드민 서비스를 설계 및 개발
 
-            * 서비스 고도화 및 안정성 확보를 위해 Kubernetes를 통해 오토 스케일링 및 Nginx를 통해 로드밸런싱 구현
+            * 고객사에서 자사의 Saas Service 관리 포탈을 통해 쉽게 화상회의 서비스 이용권한을 제공하기 위해 화상회의 서비스 연동 API 설계 및 개발
 
-            * 빠른 피드백 반영 및 서비스 개선을 위해 Jenkins를 이용해 CI/CD 구축
+            * 서비스 고도화 및 안정성 확보를 위해 Kubernetes를 통해 오토 스케일링 적용 및 스케일 아웃을 위해 기존 시스템 아키텍처 재설계 및 구성 변경
+
+            * 빠른 피드백 반영 및 서비스 개선을 위해 Jenkins를 이용해 CI/CD 구축 및 각각의 서비스들의 메타 정보 이용해 배포 관련 추적 및 롤백 구현
           tech_stack: Node.js, Express, Nginx, MariaDB, Redis, Kubernetes, Docker, Docker-compose, Jenkins
 
         - name: 스마트오피스 솔루션 - 가상화 데스크톱(DV)
