docs: 업무 경험 내용 수정

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -5,8 +5,8 @@
       left_area_vertical_align: top
       title: 유플렉스소프트
       sub_title: |
-        Java/Node.js 웹 어플리케이션 개발자<br/>
-        산업기능요원 복무
+        웹 어플리케이션 / 백엔드 개발자<br/>
+        산업기능요원 복무만료
       caption: 2019.09 ~ 현재
       quote: >
         가상화 기술을 통해 스마트오피스, 스마트교실, 스마트 공장 솔루션을 보유한 클라우드 기업
