docs: 업무 경험 내용 수정

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -25,7 +25,7 @@
 
             * 푸시메시지, 이메일, 팀즈 메시지 API 구현 및 비동기 처리
 
-            * 다국어 정보와 개인별로 구성한 커스텀 정보를 개인화설정값을 통해 다국어 및 커스텀용어 제공하는 API 구현
+            * 다국어 정보와 개인별로 구성한 커스텀 정보를 개인화설정값을 통해 다국어 및 커스텀용어 제공하는 API 및 인터셉터를 이용해 공통기능 구현
 
             * 공통 UI 작업과 업무 진척관리를 위한 화면 구현
 
