docs: 업무 경험 내용 보강

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -29,7 +29,7 @@
 
             * 공통 UI 작업과 업무 진척관리를 위한 화면 구현
 
-            * 애자일 방식으로 진행되어 요구사항의 변경이 자주 발생할 여지가 있어 **테스트 코드를 작성하며 기능 변경에도 유연하게 진행할 수 있도록 개발**
+            * 애자일 방식으로 진행되어 요구사항의 변경 혹은 기능이 확장될 가능성이 많아 **테스트 코드를 작성하여 기능 변경 및 확장에도 Side Effect를 줄이고 리팩토링을 통해 코드 품질을 유지하며 진행할 수 있도록 개발**
           tech_stack: Java, Spring MVC, Mybatis, Junit4, Resin, MSSQL
 
         - name: 올인원 화상회의 서비스
