docs: work-experience 최신화

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -11,27 +11,6 @@
       quote: >
         가상화 기술을 통해 스마트오피스, 스마트교실, 스마트 공장 솔루션을 보유한 클라우드 기업
       projects:
-        - name: SAE-A PREP 시스템
-          duration: 2021.12 ~ 현재
-          description: 세아상역에서 의류 제품을 양산 전에 이루어지는 샘플링, 소싱, 코스팅 등의 모든 업무를 시스템화 하는 SI 프로젝트입니다.
-          what_did_I_do: |
-            * Task 생성, 업데이트, 선후행 관계 제어 등 모든 업무들을 관리하는 **워크플로우 Restful API 설계 및 개발**
-
-            * 로그인 구현 및 다른 개발자분들이 로그인한 유저 정보를 쉽게 사용할 수 있도록 어노테이션 구현
-
-            * 유저별 권한 기능 구현 및 인터셉터 이용해 유저별 동적 메뉴 구성 구현
-
-            * **생산성 향상 및 코드 가독성, 안정성 확보**를 위해 조건문을 통한 유효성 검증을 어노테이션을 통한 유효성 검증으로 변경 및 Object Mapping 라이브러리 적용
-
-            * 웹 기반 푸시, 이메일, 팀즈 등의 **메시지 관련 API 구현 및 비동기 처리**
-
-            * DB를 이용해 UI의 다국어 및 커스텀 용어 처리 필요하여 **캐싱 작업**과 다국어 및 커스텀용어 제공하는 API 구현. **인터셉터를 이용해 Model에 다국어 및 커스텀 용어를 넣어** 각 담당 UI 개발자분들은 Spring Message 방식으로 개발할 수 있도록 기능 구현
-
-            * 공통 UI 작업과 업무 진척관리를 위한 화면 구현
-
-            * 애자일 방식으로 진행되어 요구사항의 변경 혹은 기능이 확장될 가능성이 많아 **테스트 코드를 작성하여 기능 변경 및 확장에도 Side Effect를 줄이고 리팩토링을 통해 코드 품질을 유지하며 진행할 수 있도록 개발**
-          tech_stack: Java, Spring MVC, Mybatis, Junit4, Resin, MSSQL
-
         - name: 올인원 화상회의 서비스
           duration: 2021.01 ~ 현재
           description: 고객사 관리자가 직접 화상회의 시스템을 관리하고, 고객사 유저 및 게스트간의 화상회의를 진행할 수 있는 B2B 웹 기반 화상회의 서비스입니다.
@@ -55,16 +34,37 @@
           duration: 2020.04 ~ 현재
           description: 스마트오피스 솔루션 중 가상화 데스크톱(DV)은 삼성 Dex 서비스와 같이 가상 데스크톱을 클라우드 기반으로 제공하는 서비스입니다.
           what_did_I_do: |
-            * 운영이 중단된 사용자포탈 서비스의 이슈 수정 및 추가 요구사항 개발하여 재런칭 및 유지보수
+            * 운영이 중단된 사용자포탈 서비스의 이슈 수정 및 추가 요구사항 개발하여 **재런칭 및 유지보수**
 
-            * SMS, 2Factor 인증 앱, 카카오 등을 통해 2Factor 인증 기능 구현
+            * SMS, 2Factor 인증 앱, 카카오 등을 통해 **2Factor 인증 기능 구현**
 
-            * 삼성물산에 가상화 데스크톱 솔루션 납품하기 위해 추가 요구사항 개발 및 커스터마이징
+            * **삼성물산에 가상화 데스크톱 솔루션 납품**하기 위해 추가 요구사항 개발 및 커스터마이징
 
-            * 관리자가 사전에 가상 데스크톱 설정하기 위해 가상 데스크톱 프로비저닝 기능 구현
+            * 관리자가 사전에 가상 데스크톱 설정하기 위해 **가상 데스크톱 프로비저닝 기능 구현**
 
-            * 에이전트 없이 순수 웹 기반 가상화 데스크톱 서비스 MVP를 내부 프로젝트를 통해 개발
+            * 에이전트 없이 순수 **웹 기반 가상화 데스크톱 서비스 MVP**를 내부 프로젝트를 통해 개발
           tech_stack: Java, Spring MVC, Tomcat, MariaDB, Docker
+
+        - name: SAE-A PREP 시스템
+          duration: 2021.12 ~ 2022.07
+          description: 세아상역에서 의류 제품을 양산 전 Pre-Production 단계에서 이루어지는 샘플링, 소싱, 코스팅 등의 모든 업무를 시스템화 하는 SI 프로젝트입니다.
+          what_did_I_do: |
+            * Task 생성, 업데이트, 선후행 관계 제어 등 모든 업무들을 관리하는 **워크플로우 Restful API 설계 및 개발**
+
+            * 로그인 구현 및 다른 개발자분들이 로그인한 유저 정보를 쉽게 사용할 수 있도록 어노테이션 구현
+
+            * 유저별 권한 기능 구현 및 인터셉터 이용해 유저별 동적 메뉴 구성 구현
+
+            * **생산성 향상 및 코드 가독성, 안정성 확보**를 위해 조건문을 통한 유효성 검증을 어노테이션을 통한 유효성 검증으로 변경 및 Object Mapping 라이브러리 적용
+
+            * 웹 기반 푸시, 이메일, 팀즈 등의 **메시지 관련 API 구현 및 비동기 처리**
+
+            * DB를 이용해 UI의 다국어 및 커스텀 용어 처리 필요하여 **캐싱 작업**과 다국어 및 커스텀용어 제공하는 API 구현. **인터셉터를 이용해 Model에 다국어 및 커스텀 용어를 넣어** 각 담당 UI 개발자분들은 Spring Message 방식으로 개발할 수 있도록 기능 구현
+
+            * 공통 UI 작업과 업무 진척관리를 위한 화면 구현
+
+            * 애자일 방식으로 진행되어 요구사항의 변경 혹은 기능이 확장될 가능성이 많아 **테스트 코드를 작성하여 기능 변경 및 확장에도 Side Effect를 줄이고 리팩토링을 통해 코드 품질을 유지하며 진행할 수 있도록 개발**
+          tech_stack: Java, Spring MVC, Mybatis, Junit4, Resin, MSSQL
 
         - name: 스마트오피스 솔루션 - 문서중앙화
           duration: 2020.06 ~ 2021.05
