--- a/_data/resume/skill.yml
+++ b/_data/resume/skill.yml
@@ -7,8 +7,8 @@
       description: | # this will include new lines to allow paragraphs
         * Java, Node.js
         * Spring MVC, Spring Boot, Express
-        * Mybatis
-        * Junit4/5
+        * JPA, Mybatis
+        * Junit5, Mockito, RestAssured, Spring REST Docs
         * Gradle, Maven
         * Intellij, Eclipse, Visual Studio Code
     - layout: left
