--- a/_data/resume/education.yml
+++ b/_data/resume/education.yml
@@ -3,6 +3,14 @@
   content:
     - layout: left
       left_area_vertical_align: top
+      title: NEXTSTEP - ATDD, 클린 코드 with Spring 5기
+      caption: 2022.07 ~ 2022.08
+      description: |
+        * 인수테스트 기반의 개발을 학습하고자 참여
+        * ATDD와 TDD 기반의 개발 방법, 테스트 코드 리팩터링, 테스트 코드의 클린코드 방법, 문서화 방안을 학습
+        * 4개의 미션을 직접 진행하며 리뷰받는 방식으로 진행
+    - layout: left
+      left_area_vertical_align: top
       title: NEXTSTEP - TDD, 클린 코드 with Java 14기
       caption: 2022.04 ~ 2022.06
       description: |
