docs: work-experience 최신화

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -23,11 +23,11 @@
 
             * 고객사에서 자사의 Saas Service 관리 포탈을 통해 쉽게 화상회의 서비스 이용권한을 제공하기 위해 **화상회의 서비스 연동 API 설계 및 개발**
 
-            * 서비스 고도화 및 안정성 확보를 위해 다양한 Metric 정보를 바탕으로 **오토 스케일링 적용**. 기존 시스템 아키텍처의 경우 스케일 인 / 아웃이 가능한 구조가 아니여서 **WebRTC 오픈소스 수정 및 시스템 아키텍처 재설계**
+            * 서비스 고도화 및 안정성 확보를 위해 다양한 Metric 정보를 바탕으로 **미디어 서버 오토 스케일링 적용**. 기존 시스템 아키텍처의 경우 스케일 인 / 아웃이 가능한 구조가 아니여서 **WebRTC 오픈소스 수정 및 시스템 아키텍처 재설계**
 
             * 기존 Docker-compose 기반의 시스템 구성을 **Kubernetes 기반의 시스템 구성으로 전환**
 
-            * 빠른 피드백 반영 및 서비스 개선을 위해 Jenkins를 이용해 **CI/CD 구축 및 각각의 서비스들의 메타 정보 이용해 배포 관련 추적 및 롤백 구현**
+            * 빠른 피드백 반영 및 서비스 개선을 위해 Jenkins를 이용해 **CI/CD 구축하여 배포 시간을 90% 단축 및 각각의 서비스들의 메타 정보 이용해 배포 관련 추적 및 롤백 구현**
           tech_stack: Node.js, Express, Nginx, MariaDB, Redis, Kubernetes, Docker, Docker-compose, Jenkins
 
         - name: 스마트오피스 솔루션 - 가상화 데스크톱(DV)
