docs: work-experience 워딩 수정

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -38,7 +38,7 @@
 
             * SMS, 2Factor 인증 앱, 카카오 등을 통해 **2Factor 인증 기능 구현**
 
-            * **삼성물산에 가상화 데스크톱 솔루션 납품**하기 위해 추가 요구사항 개발 및 커스터마이징
+            * **삼성물산에 가상화 데스크톱 솔루션 제공**하기 위해 추가 요구사항 개발 및 커스터마이징
 
             * 관리자가 사전에 가상 데스크톱 설정하기 위해 **가상 데스크톱 프로비저닝 기능 구현**
 
