--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -3,6 +3,22 @@
   content:
     - layout: left
       left_area_vertical_align: top
+      title: 무신사
+      sub_title: |
+        글로벌개발팀. 백엔드 개발자
+      caption: 2022.10 ~ 현재
+      quote: >
+        MAU 1,300만의 온라인 패션커머스 서비스
+      projects:
+        - name: 글로벌 무신사 스토어 서비스
+          duration: 2022.10 ~ 현재
+          description: Global 시장에 K-Fashion을 바탕으로 패션 커머스 서비스를 제공하는 무신사 스토어 서비스입니다.
+          what_did_I_do: |
+            * 베트남 접근성과 편의성 개선을 위해 전시 관련 베트남어 개발
+          tech_stack: Spring Boot, JPA, Spring Data Jpa, Querydsl, MariaDB
+
+    - layout: left
+      left_area_vertical_align: top
       title: 유플렉스소프트
       sub_title: |
         웹 어플리케이션 / 백엔드 개발자<br/>
