--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
-title: LaeWoong
+title: 래웅의 블로그
 author: wlroh
 email: wlroh.paul@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  래웅의 블로그, 공부한 내용을 기록하거나 일상 고민들을 적는 일기장이에요.
 show_excerpts: true # set to true to show excerpts on the homepage
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 
+# collections:
+#   memoirs:
+#     output: true
 sass:
   sass_dir: _sass
 plainwhite:
@@ -51,6 +52,8 @@ plainwhite:
       url: "/"
     - title: Categories
       url: "/categories"
+    # - title: Memoirs
+    #   url: "/memoirs"
 
 # --------------------------------------  Resume Config  --------------------------------------
 
