--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -14,7 +14,9 @@
           duration: 2022.10 ~ 현재
           description: Global 시장에 K-Fashion을 바탕으로 패션 커머스 서비스를 제공하는 무신사 스토어 서비스입니다.
           what_did_I_do: |
-            * 베트남 접근성과 편의성 개선을 위해 전시 관련 베트남어 개발
+            * **베트남 접근성과 편의성 개선**을 위해 전시 관련 베트남어 관리 기능 구현
+            * 국가별로 전시 관리가 가능하도록 관리 기능 개선하여, **각 국가별 계절 혹은 특징에 맞게 기획전, 상품 등 전시**
+            * 뉴진스 프로모션 관련 리소스, 코디숍 API 구현. 초기 API의 경우 캐싱이 없는 상황에서 요청 시 내부 API 통신이 많아 응답속도가 느린 문제가 있어, **비동기 처리를 통해 응답속도를 500ms -> 100ms 약 80% 성능 개선**
           tech_stack: Spring Boot, JPA, Spring Data Jpa, Querydsl, MariaDB
 
     - layout: left
