chore: google analytics 연동하라

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ plainwhite:
   date_format: "%b %-d, %Y"
   sitemap: true
   search: true
+  analytics_id: G-HCKCGPDD5F
   dark_mode: true
   portfolio_image: "assets/images/portfolio.png"
   html_lang: "KR"
