Work Experience 최신화하라

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -19,8 +19,7 @@
             * 디자인 개편 및 FE 전환 관련 로직 개선 및 API 구현
             * **디바이스별 다양한 탐색 경험을 제공**하기 위해 메뉴 로직 개선 및 API 구현
             * **코드 품질 향상 위한 리팩터링, 서비스 안정성, 요구사항 명세서 역할** 목적으로 단위 테스트 코드 작성
-            * 유지보수 향상을 위한 아키텍처를 도메인별로 리팩터링
-            * 신규 통화 및 언어 추가됨에 따라 로직 개선
+            * **안정화된 서비스 제공**하기 위한 모니터링 및 버그 수정
             * 프로모션 API 구현. 캐싱 데이터가 없을 때 내부 API 통신이 많아 응답속도가 느린 문제가 있어, **비동기 처리를 통해 응답속도를 500ms -> 100ms 약 80% 성능 개선**
           tech_stack: Java, Spring Boot, JPA, Spring Data JPA, Querydsl, Redisson, Kafka, MariaDB, Redis
 
