Work Experience 최신화하라

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -14,9 +14,8 @@
           duration: 2022.10 ~ 현재
           description: Global 시장에 K-Fashion을 바탕으로 13개 국가에 패션 커머스 서비스를 제공하는 무신사 스토어 서비스입니다.
           what_did_I_do: |
-            * 래플 서비스 제공하기 위한 데이터 모델링 및 신규 API 구현
+            * **신규 유저 확보**를 위한 래플 서비스 데이터 모델링 및 API 구현
             * **탐색 경험 및 구매 전환 개선** 위한 상품 상세 로직 개선 및 API 구현
-            * 디자인 개편 및 FE 전환 관련 로직 개선 및 API 구현
             * **디바이스별 다양한 탐색 경험을 제공**하기 위해 메뉴 로직 개선 및 API 구현
             * **코드 품질 향상 위한 리팩터링, 서비스 안정성, 요구사항 명세서 역할** 목적으로 단위 테스트 코드 작성
             * **안정화된 서비스 제공**하기 위한 모니터링 및 버그 수정
