docs: 스킬 셋 파트를 최신화하라

--- a/_data/resume/skill.yml
+++ b/_data/resume/skill.yml
@@ -15,7 +15,7 @@
       left_area_vertical_align: top
       title: DevOps
       description: | # this will include new lines to allow paragraphs
-        * MySQL, MariaDB, MSSQL, Redis
+        * MySQL, MariaDB, MSSQL, Redis, MongoDB
         * Jenkins, Ansible
         * Tomcat, Nginx, Resin
         * Linux(CentOS, Ubuntu)
