--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -20,12 +20,13 @@
             * **코드 품질 향상 위한 리팩터링, 서비스 안정성, 요구사항 명세서 역할** 목적으로 단위 테스트 코드 작성
             * **안정화된 서비스 제공**하기 위한 모니터링 및 버그 수정
             * 프로모션 API 구현. 캐싱 데이터가 없을 때 내부 API 통신이 많아 응답속도가 느린 문제가 있어, **비동기 처리를 통해 응답속도를 500ms -> 100ms 약 80% 성능 개선**
-          tech_stack: Java, Spring Boot, JPA, Spring Data JPA, Querydsl, Redisson, Kafka, MariaDB, Redis
+          tech_stack: Java, Spring Boot, JPA, Spring Data JPA, Querydsl, Redisson, Kafka, MariaDB, Redis, MongoDB
 
         - name: 글로벌 무신사 백오피스
           duration: 2022.10 ~ 현재
           description: Global 무신사 스토어 서비스를 운영하기 위해 내부에서 사용하는 관리 툴입니다.
           what_did_I_do: |
+            * 사업, 마케팅팀에서 래플을 관리할 수 있도록 래플 관리 기능 구현
             * 각 국가별 디바이스 사용률에 따른 탐색 경험 제공하기 위해 **디바이스별 메뉴 관리 기능 구현**                    
             * 국가별로 전시 관리가 가능하도록 관리 기능 개선하여, **각 국가별 계절 혹은 특징에 맞게 기획전, 상품 등 전시**
             * **국가별 현지 통화 제공**하기 위해 신규 통화 반영
