docs: 외부 경험을 최신화하라

--- a/_data/resume/other-experience.yml
+++ b/_data/resume/other-experience.yml
@@ -13,7 +13,7 @@
       caption: 2023.12 ~ 현재
       description: | # this will include new lines to allow paragraphs
         * 글또(글 쓰는 또라이가 세상을 바꾼다) 9기 활동을 하고 있습니다.
-        * 글쓰기란, 제가 아는 지식에 대해 공유함으로써 다른분들께 도움을 줄 수 있다는 즐거움과 지식을 공유하기 위해 아는 것과 안다고 착가하는 것을 구분함으로써 나의 지식도 정리되는 너무 좋은 활동이라고 생각하고 있어 글또 활동을 통해 개발 커뮤니티에 기여하고자 합니다.
+        * 글쓰기란, 제가 아는 지식에 대해 공유함으로써 다른분들께 도움을 줄 수 있다는 즐거움과 지식을 공유하기 위해 아는 것과 안다고 착각하는 것을 구분함으로써 저의 지식도 정리되는 너무 좋은 활동이라고 생각하고 있어 글또 활동을 통해 개발 커뮤니티에 기여하고자 합니다.
 
     - layout: top-middle
       title: 리뷰어 활동
