docs: 업무 경험 파트를 최신화하라

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -14,24 +14,21 @@
           duration: 2022.10 ~ 현재
           description: Global 시장에 K-Fashion을 바탕으로 13개 국가에 패션 커머스 서비스를 제공하는 무신사 스토어 서비스입니다.
           what_did_I_do: |
-            * 래플 서비스 제공하기 위한 래플 시스템 개발 및 API 구현
-            * **탐색 경험 및 구매 전환 개선** 위한 상품 상세 로직 개선 및 API 구현
-            * **디바이스별 다양한 탐색 경험을 제공**하기 위해 메뉴 로직 개선 및 API 구현
+            * **유저 신규 가입과 재방문을 유도**하기 위한 서비스 구현 및 개선
+              * 래플 도메인 모델링 및 신규 시스템 구현
+              * 현지 네트워크 상황과 어뷰징 이슈 방지를 위해 **분산락을 통한 응모 시스템 구성**
+            * **고품질의 탐색 경험과 구매 유도**하기 위해 서비스 구현 및 개선
+              * 상품목록 리팩터링 및 도메인 모델로 분리하여 PLP(Product List Page) 조회 시 **p99 기준 Latency 60% 개선 및 안정화**
+              * 상품 상세 도메인 모델링 및 로직 개선과 신규 API 구현
+              * 메뉴 도메인 모델링 재설계 및 로직 개선
+              * 캐싱 데이터가 없을 때 내부 API 통신이 많아 응답속도가 느린 문제가 있어, **Thread Pool 구성과 비동기 통해 Latency 약 80% 개선**
+            * **안정적인 서비스 제공**을 위해 CI/CD 재구성과 모니터링 시스템 개편
+              * 기존 EC2와 Kubernetes를 통한 서비스를 모두 Kubernetes 로 전환하여 **안정적인 시스템 구성과 배포 및 롤백 시간을 60% 개선**
+              * CI/CD 구성을 Jenkins & Spinnaker 에서 ArgoCD & Github Action 으로 전환하여 **개발팀 내에서 서비스에 대한 관리 효율성 증대**
+              * 빠른 장애인지와 불필요한 노티를 제거하기 위해 **메트릭 기반 모니터링과 로그 모니터링 재구성**
+              * KEDA 설정을 통해 Auto-Scaling 구성
             * **코드 품질 향상 위한 리팩터링, 서비스 안정성, 요구사항 명세서 역할** 목적으로 단위 테스트 코드 작성
-            * **안정화된 서비스 제공**하기 위한 모니터링 및 버그 수정
-            * 프로모션 API 구현. 캐싱 데이터가 없을 때 내부 API 통신이 많아 응답속도가 느린 문제가 있어, **비동기 처리를 통해 응답속도를 500ms -> 100ms 약 80% 성능 개선**
           tech_stack: Java, Spring Boot, JPA, Spring Data JPA, Querydsl, Redisson, Kafka, MariaDB, Redis, MongoDB
-
-        - name: 글로벌 무신사 백오피스
-          duration: 2022.10 ~ 현재
-          description: Global 무신사 스토어 서비스를 운영하기 위해 내부에서 사용하는 관리 툴입니다.
-          what_did_I_do: |
-            * 사업, 마케팅팀에서 래플을 관리할 수 있도록 래플 관리 기능 구현
-            * 각 국가별 디바이스 사용률에 따른 탐색 경험 제공하기 위해 **디바이스별 메뉴 관리 기능 구현**                    
-            * 국가별로 전시 관리가 가능하도록 관리 기능 개선하여, **각 국가별 계절 혹은 특징에 맞게 기획전, 상품 등 전시**
-            * **국가별 현지 통화 제공**하기 위해 신규 통화 반영
-            * **베트남 접근성과 편의성 개선**을 위해 전시 관련 베트남어 관리 기능 구현
-          tech_stack: Thymeleaf, Javascript, Java, Spring Boot, JPA, Spring Data JPA, Querydsl, MariaDB
 
     - layout: left
       left_area_vertical_align: top
