--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -20,8 +20,8 @@
             * **고품질의 탐색 경험과 구매 유도**하기 위해 서비스 구현 및 개선
               * 상품목록 리팩터링 및 도메인 모델로 분리하여 PLP(Product List Page) 조회 시 **p99 기준 Latency 60% 개선 및 안정화**
               * 상품 상세 도메인 모델링 및 로직 개선과 신규 API 구현
-              * 메뉴 도메인 모델링 재설계 및 로직 개선
-              * 캐싱 데이터가 없을 때 내부 API 통신이 많아 응답속도가 느린 문제가 있어, **Thread Pool 구성과 비동기 통해 Latency 약 80% 개선**
+              * 메뉴 도메인 모델링 재설계 및 로직 개선하여 캐싱 데이터 동기화 개선
+              * MSA 구조와 API Composition 패턴으로 인해 성능 최적화하기 위해 **별도의 Thread Pool 구성과 비동기 통해 Latency 약 80% 개선**
             * **안정적인 서비스 제공**을 위해 CI/CD 재구성과 모니터링 시스템 개편
               * 기존 EC2와 Kubernetes를 통한 서비스를 모두 Kubernetes 로 전환하여 **안정적인 시스템 구성과 배포 및 롤백 시간을 60% 개선**
               * CI/CD 구성을 Jenkins & Spinnaker 에서 ArgoCD & Github Action 으로 전환하여 **개발팀 내에서 서비스에 대한 관리 효율성 증대**
