--- a/_data/resume/skill.yml
+++ b/_data/resume/skill.yml
@@ -16,7 +16,7 @@
       title: DevOps
       description: | # this will include new lines to allow paragraphs
         * MySQL, MariaDB, MSSQL, Redis, MongoDB
-        * Jenkins, Ansible
+        * Argo CD, Github Action, Jenkins, Ansible
         * Tomcat, Nginx, Resin
         * Linux(CentOS, Ubuntu)
         * Docker, Docker-compose, Kubernetes, Kafka
