docs: 업무 경험 파트를 최신화하라

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -21,7 +21,7 @@
               * 상품목록 리팩터링 및 도메인 모델로 분리하여 PLP(Product List Page) 조회 시 **p99 기준 Latency 60% 개선 및 안정화**
               * 상품 상세 도메인 모델링 및 로직 개선과 신규 API 구현
               * 메뉴 도메인 모델링 재설계 및 로직 개선하여 캐싱 데이터 동기화 개선
-              * 캠페인 도메인 PoC 진행 및 검증완료. 상품과 브랜드 기반의 캠페인 모델링 및 API 구현
+              * 캠페인 도메인 PoC 진행 및 검증완료하여 정규 프로젝트 진행. 상품과 브랜드 기반의 캠페인 모델링 및 캠페인 시스템 구현. 캠페인 도입 이후 **거래액 278% 상승 및 운영리소스 80% 절감**
               * MSA 구조와 API Composition 패턴으로 인해 성능 최적화하기 위해 **Thread Pool 구성 및 비동기를 활용한 Composition과 CQRS 패턴을 통해 Latency 개선**
             * **안정적인 서비스 제공**을 위해 CI/CD 재구성과 모니터링 시스템 개편
               * 기존 EC2와 Kubernetes를 통한 서비스를 모두 Kubernetes 로 전환하여 **안정적인 시스템 구성과 배포 및 롤백 시간을 60% 개선**
