--- a/_config.yml
+++ b/_config.yml
@@ -89,11 +89,17 @@ gtag: "G-HCKCGPDD5F"
 # About Section
 about_profile_image: assets/images/paul1.jpeg
 about_content: |
-  6년차 개발자로 웹 어플리케이션과 백엔드를 기획/개발/배포/운영하였습니다. 주로 웹 서비스, Restful API 개발을 담당했으며, 개발은 혼자하는 것이 아닌 함께 만들어간다고 생각하여 능동적이고 적극적으로 팀과 <mark>소통</mark>하며 진행합니다.
+  > 생산성을 높여, 더 큰 가치를 만듭니다.
+
+  단순한 자동화를 넘어, 팀이 핵심 업무에 집중할 수 있는 환경을 만들기 위해 노력합니다. 반복적이고 비효율적인 업무를 발견하고, 문제 원인을 분석해 시스템화합니다. 이를 통해 팀의 업무 시간을 절감하고, 조직 전체의 업무 흐름을 개선해왔습니다.
   <br/><br/>
-  고객들에게 더 좋은 가치를 제공하기 위해서는 <mark>서비스 품질</mark>과 <mark>빠른 요구사항 반영</mark>이 중요하다고 생각합니다. 이를 위해 어떻게 하면 더 좋은 코드를 작성할 수 있을지 고민하고 테스트코드 작성과 리팩토링합니다. 또한 새로운 프레임워크, 기술, 패러다임 등의 skill set들이 왜 사용되는지 이해하고, 이를 통해 더 좋은 방법들을 적용하여 생산성 향상을 위해 노력합니다.
+  > 꾸준히 배우며 더 나은 해결책을 찾습니다.
+  
+  프로그래밍은 정답이 없고 트레이드오프의 연속이라고 생각합니다. 다양한 스킬셋의 장단점을 깊이 이해하며, 상황에 맞는 최적의 해결책을 찾는 데 집중합니다. 이러한 노력은 더 나은 아키텍처 설계와 합리적인 기술 선택으로 이어진다고 믿습니다.
   <br/><br/>
-  1일 1커밋이라는 시스템을 통해 계속 <mark>성장</mark>하고 있습니다. 성장이라는 목표를 이루기 위해 시스템을 만들고, 시스템을 유지하기 위해 회고하려고 노력합니다.
+  > 지식을 나누며 함께 성장합니다.
+  
+  배운 지식을 나누는 것은 단순한 공유를 넘어, 팀과 조직의 발전에 기여하는 길이라고 생각합니다. 사내 스터디와 발표를 통해 새로운 기술과 인사이트를 함께 탐구해왔습니다.
 
 # -------------------------------------- END Resume Config  --------------------------------------
 
