--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -14,22 +14,48 @@
           duration: 2022.10 ~ 현재
           description: Global 시장에 K-Fashion을 바탕으로 13개 국가에 패션 커머스 서비스를 제공하는 무신사 스토어 서비스입니다.
           what_did_I_do: |
-            * **유저 신규 가입과 재방문을 유도**하기 위한 서비스 구현 및 개선
-              * 래플 도메인 모델링 및 신규 시스템 구현
-              * 현지 네트워크 상황과 어뷰징 이슈 방지를 위해 **분산락을 통한 응모 시스템 구성**
-            * **고품질의 탐색 경험과 구매 유도**하기 위해 서비스 구현 및 개선
-              * 상품목록 리팩터링 및 도메인 모델로 분리하여 PLP(Product List Page) 조회 시 **p99 기준 Latency 60% 개선 및 안정화**
-              * 상품 상세 도메인 모델링 및 로직 개선과 신규 API 구현
-              * 메뉴 도메인 모델링 재설계 및 로직 개선하여 캐싱 데이터 동기화 개선
-              * 캠페인 도메인 PoC 진행 및 검증완료하여 정규 프로젝트 진행. 상품과 브랜드 기반의 캠페인 모델링 및 캠페인 시스템 구현. 캠페인 도입 이후 **거래액 278% 상승 및 운영리소스 80% 절감**
-              * MSA 구조와 API Composition 패턴으로 인해 성능 최적화하기 위해 **Thread Pool 구성 및 비동기를 활용한 Composition과 CQRS 패턴을 통해 Latency 개선**
-            * **안정적인 서비스 제공**을 위해 CI/CD 재구성과 모니터링 시스템 개편
-              * 기존 EC2와 Kubernetes를 통한 서비스를 모두 Kubernetes 로 전환하여 **안정적인 시스템 구성과 배포 및 롤백 시간을 60% 개선**
-              * CI/CD 구성을 Jenkins & Spinnaker 에서 ArgoCD & Github Action 으로 전환하여 **개발팀 내에서 서비스에 대한 관리 효율성 증대**
-              * 빠른 장애인지와 불필요한 노티를 제거하기 위해 **메트릭 기반 모니터링과 로그 모니터링 재구성**
-              * KEDA 설정을 통해 Auto-Scaling 구성
-            * **코드 품질 향상 위한 리팩터링, 서비스 안정성, 요구사항 명세서 역할** 목적으로 단위 테스트 코드 작성
-          tech_stack: Java(JDK 17), Spring Boot, JPA, Spring Data JPA, Querydsl, Redisson, Kafka, MariaDB, Redis, MongoDB, Github Action, ArgoCD, Docker, Kubernetes
+            * **글로벌 무신사 스토어 개발 및 운영**
+
+              * 캠페인 PoC 진행 및 타당성 검증을 통해 전략 과제화를 도출. PoC 단계에서 구현한 시스템을 기반으로 글로벌 캠페인 시스템 재설계 및 고도화를 수행하여, 캠페인 도입 후 **거래액 278% 증가 및 운영 리소스 80% 절감**
+              
+              * 글로벌 래플 시스템 설계 및 고도화. **동시성 이슈로 인한 중복 응모 방지를 위해 Redis 기반 분산 락을 적용, 데이터 무결성 보장**
+              
+              * 비효율적인 운영 리소스 문제 **발견 및 분석**, 이해관계자 협업을 통해 자동화 프로세스 **설계 및 구현**, 운영 리소스 효율성 및 조직 생산성 **향상 기여**
+              
+              * 회원가입 및 알림설정 로직을 개선, 앱 수신동의율 평균 약 **30% 에서 약 50%로 19.7% 증가**
+              
+              * 관세 관리 및 관부가세 설계 및 구현, 각 국가별 관세 대응 기반 마련
+            
+            * **레거시 개선 및 성능 개선**
+              
+              * **캠페인 CQRS 패턴 적용 및 별도 읽기 모델 생성**으로 BFF 서비스 내 API 요청 수 최적화 및 레이턴시 개선. 이벤트 기반 아키텍처 적용으로 캠페인 변경 사항을 실시간 반영하여 데이터 동기화 및 최신 상태 유지
+              
+              * 정시 기준 일괄 갱신을 위해 **별도 키(시간대별 데이터 버전을 관리하는 키) 필드를 활용하여 읽기 모델을 구성**
+              
+              * **별도 키 메타데이터를 별도 Collection에서 관리하여 확장성을 고려한 설계** 적용. 향후 데이터 증가 시 **Collection 분리 전략 도입 검토하여, 필요 시 샤딩 적용 가능성도 고려**
+              
+              * 상품목록 리팩터링 및 읽기 모델로 분리하기 위한 기반 마련. **Thread Pool 구성 및 비동기를 활용한 Composition 방식을 통해** PLP(Product List Page) 조회 시 **p99 기준 Latency 60% 개선 및 안정화**
+              
+              * PDP(Product Detail Page) 로직 개선과 캐싱적용을 통해 **p95 기준 Latency 33% 개선**
+            
+            * **서비스 가용성 & 투명성 개선**
+              
+              * 기존 EC2 환경에서 Kubernetes 기반으로 서비스 전환하여 **운영 자동화 및 확장성 강화**. **배포 및 롤백 시간을 60% 단축**하여 운영 부담을 줄이고, 안정적인 시스템 운영 가능하도록 개선
+              
+              * CI/CD 구성을 Jenkins & Spinnaker 에서 ArgoCD & Github Action 으로 전환하여 **개발팀 내에서 서비스에 대한 관리 효율성 증대** 및 공유세션을 통해 전파하여 **팀내 구성원분이 타 서비스도 전환할 수 있도록 기여**
+              
+              * 빠른 장애인지와 불필요한 노티를 제거하기 위해 **메트릭 기반 모니터링과 로그 모니터링 재구성하여 최대 5분에서 1분으로 단축과 노이즈 제거**
+              
+              * 기존 대시보드에 DocumentDB & Redis 주요 지표와 JVM 메트릭 정보 구성하여 **서비스 투명성 강화**
+            
+            * **개발 문화 개선**
+              
+              * 조직 내 구성원 간 **도메인 지식 수준을 맞추기 위한 방안으로 [도메인 스토리텔링] 발표**
+              
+              * PR 리뷰의 한계를 보완하기 위한 오프라인 스터디 운영 (감정적 부담 완화, 시간적 제약 해소, 텍스트 커뮤니케이션의 한계 극복). 클린아키텍처, 오브젝트, 이펙티브 자바, Git 사내 스터디 진행
+              
+              * 자유로운 토론을 통해 코드 컨벤션 고도화 및 개발 문화 개선 기여
+          tech_stack: Java(JDK 21), Spring Boot, JPA, Spring Data JPA, Querydsl, Redisson, Junit5, Mockito, Swagger, MariaDB, Redis, MongoDB, Kafka, Github Action, ArgoCD, Docker, Kubernetes
 
     - layout: left
       left_area_vertical_align: top
@@ -79,21 +105,13 @@
           duration: 2021.12 ~ 2022.07
           description: 세아상역에서 의류 제품을 양산 전 Pre-Production 단계에서 이루어지는 샘플링, 소싱, 코스팅 등의 모든 업무를 시스템화 하는 SI 프로젝트입니다.
           what_did_I_do: |
-            * Task 생성, 업데이트, 선후행 관계 제어 등 모든 업무들을 관리하는 **워크플로우 Restful API 설계 및 개발**
+            * Task 생성, 업데이트, 선후행 관계 제어 등 모든 업무들을 관리하는 **워크플로우 시스템 설계 및 개발**
 
-            * 로그인 구현 및 다른 개발자분들이 로그인한 유저 정보를 쉽게 사용할 수 있도록 어노테이션 구현
-
-            * 유저별 권한 기능 구현 및 인터셉터 이용해 유저별 동적 메뉴 구성 구현
-
-            * **생산성 향상 및 코드 가독성, 안정성 확보**를 위해 조건문을 통한 유효성 검증을 어노테이션을 통한 유효성 검증으로 변경 및 Object Mapping 라이브러리 적용
+            * 유저 인증 및 인가 시스템 설계 및 구현. 커스텀 어노테이션 통해 인증정보 활용할 수 있도록 기반 마련
 
             * 웹 기반 푸시, 이메일, 팀즈 등의 **메시지 관련 API 구현 및 비동기 처리**
 
-            * DB를 이용해 UI의 다국어 및 커스텀 용어 처리 필요하여 **캐싱 작업**과 다국어 및 커스텀용어 제공하는 API 구현. **인터셉터를 이용해 Model에 다국어 및 커스텀 용어를 넣어** 각 담당 UI 개발자분들은 Spring Message 방식으로 개발할 수 있도록 기능 구현
-
-            * 공통 UI 작업과 업무 진척관리를 위한 화면 구현
-
-            * 애자일 방식으로 진행되어 요구사항의 변경 혹은 기능이 확장될 가능성이 많아 **테스트 코드를 작성하여 기능 변경 및 확장에도 Side Effect를 줄이고 리팩토링을 통해 코드 품질을 유지하며 진행할 수 있도록 개발**
+            * 다국어 및 용어사전 시스템 설계 및 개발. **RDBMS + 로컬 메모리 캐싱을 조합하여 대규모 데이터 처리 성능 최적화**
           tech_stack: Java, Spring MVC, Mybatis, Junit4, Resin, MSSQL
 
         - name: 스마트오피스 솔루션 - 문서중앙화
