--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -6,12 +6,12 @@
       title: 무신사
       sub_title: |
         글로벌개발팀. 백엔드 개발자
-      caption: 2022.10 ~ 현재
+      caption: 2022.10 - 현재
       quote: >
         MAU 1,300만의 온라인 패션커머스 서비스 기업
       projects:
         - name: 글로벌 무신사 스토어 서비스
-          duration: 2022.10 ~ 현재
+          duration: 2022.10 - 현재
           description: Global 시장에 K-Fashion을 바탕으로 13개 국가에 패션 커머스 서비스를 제공하는 무신사 스토어 서비스입니다.
           what_did_I_do: |
             * **글로벌 무신사 스토어 개발 및 운영**
@@ -63,12 +63,12 @@
       sub_title: |
         웹 어플리케이션 / 백엔드 개발자<br/>
         산업기능요원 복무만료
-      caption: 2019.09 ~ 2022.10
+      caption: 2019.09 - 2022.10
       quote: >
         가상화 기술을 통해 스마트오피스, 스마트교실, 스마트 공장 솔루션을 보유한 클라우드 기업
       projects:
         - name: 올인원 화상회의 서비스
-          duration: 2021.01 ~ 2022.10
+          duration: 2021.01 - 2022.10
           description: 고객사 관리자가 직접 화상회의 시스템을 관리하고, 고객사 유저 및 게스트간의 화상회의를 진행할 수 있는 B2B 웹 기반 화상회의 서비스입니다.
           what_did_I_do: |
             * 혼자서 화상회의 신규 서비스를 기획, 설계, 개발, 운영 중이며, 현재 **100여개의 기업**에서 화상회의 서비스를 이용
@@ -87,7 +87,7 @@
           tech_stack: Node.js, Express, Nginx, MariaDB, Redis, Kubernetes, Docker, Docker-compose, Jenkins
 
         - name: 스마트오피스 솔루션 - 가상화 데스크톱(DV)
-          duration: 2020.04 ~ 2022.10
+          duration: 2020.04 - 2022.10
           description: 스마트오피스 솔루션 중 가상화 데스크톱(DV)은 삼성 Dex 서비스와 같이 가상 데스크톱을 클라우드 기반으로 제공하는 서비스입니다.
           what_did_I_do: |
             * 운영이 중단된 사용자포탈 서비스의 이슈 수정 및 추가 요구사항 개발하여 **재런칭 및 유지보수**
@@ -102,7 +102,7 @@
           tech_stack: Java, Spring MVC, Tomcat, MariaDB, Docker
 
         - name: SAE-A PREP 시스템
-          duration: 2021.12 ~ 2022.07
+          duration: 2021.12 - 2022.07
           description: 세아상역에서 의류 제품을 양산 전 Pre-Production 단계에서 이루어지는 샘플링, 소싱, 코스팅 등의 모든 업무를 시스템화 하는 SI 프로젝트입니다.
           what_did_I_do: |
             * Task 생성, 업데이트, 선후행 관계 제어 등 모든 업무들을 관리하는 **워크플로우 시스템 설계 및 개발**
@@ -115,7 +115,7 @@
           tech_stack: Java, Spring MVC, Mybatis, Junit4, Resin, MSSQL
 
         - name: 스마트오피스 솔루션 - 문서중앙화
-          duration: 2020.06 ~ 2021.05
+          duration: 2020.06 - 2021.05
           description: 스마트오피스 솔루션 중 문서중앙화는 중앙 저장소에 모든 자료를 저장 및 백업을 통해 랜섬웨어 및 사이버 테러에서 안전하게 기업의 정보 자산을 보호하는 서비스입니다.
           what_did_I_do: |
             * ETRI 기술이전 관련 클라우드 및 온프레미스 기반의 문서 중앙화 서비스 프로젝트 참여
