(docs): 자기소개를 최신화하라

--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -88,16 +88,16 @@ linkedin_username: wlroh
 # About Section
 about_profile_image: assets/images/paul1.jpeg
 about_content: |
-  > 생산성을 높여, 더 큰 가치를 만듭니다.
+  > **생산성을 높여, 더 큰 가치를 만듭니다.**
 
   단순한 자동화를 넘어, 팀이 핵심 업무에 집중할 수 있는 환경을 만들기 위해 노력합니다. 반복적이고 비효율적인 업무를 발견하고, 문제 원인을 분석해 시스템화합니다. 이를 통해 팀의 업무 시간을 절감하고, 조직 전체의 업무 흐름을 개선해왔습니다.
   <br/><br/>
-  > 꾸준히 배우며 더 나은 해결책을 찾습니다.
+  > **꾸준히 배우며 더 나은 해결책을 찾습니다.**
   
   프로그래밍은 정답이 없고 트레이드오프의 연속이라고 생각합니다. 다양한 스킬셋의 장단점을 깊이 이해하며, 상황에 맞는 최적의 해결책을 찾는 데 집중합니다. 이러한 노력은 더 나은 아키텍처 설계와 합리적인 기술 선택으로 이어진다고 믿습니다.
   <br/><br/>
-  > 지식을 나누며 함께 성장합니다.
-  
+  > **지식을 나누며 함께 성장합니다.**
+
   배운 지식을 나누는 것은 단순한 공유를 넘어, 팀과 조직의 발전에 기여하는 길이라고 생각합니다. 사내 스터디와 발표를 통해 새로운 기술과 인사이트를 함께 탐구해왔습니다.
 
 # -------------------------------------- END Resume Config  --------------------------------------
