(docs): 업무경험을 최신화하라

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -28,11 +28,13 @@
             
             * **레거시 개선 및 성능 개선**
               
-              * **캠페인 CQRS 패턴 적용 및 별도 읽기 모델 생성**으로 BFF 서비스 내 API 요청 수 최적화 및 레이턴시 개선. 이벤트 기반 아키텍처 적용으로 캠페인 변경 사항을 실시간 반영하여 데이터 동기화 및 최신 상태 유지
-              
-              * 정시 기준 일괄 갱신을 위해 **별도 키(시간대별 데이터 버전을 관리하는 키) 필드를 활용하여 읽기 모델을 구성**
-              
-              * **별도 키 메타데이터를 별도 Collection에서 관리하여 확장성을 고려한 설계** 적용. 향후 데이터 증가 시 **Collection 분리 전략 도입 검토하여, 필요 시 샤딩 적용 가능성도 고려**
+              * **캠페인 도메인을 읽기모델과 쓰기모델로 분리(CQRS 패턴 적용)**하여 BFF 서비스 내 내부 API 호출을 최적화하고 API Latency 개선
+
+              * 대용량 데이터 처리 최적화를 위해 **배치 기반과 이벤트 기반 갱신을 혼합**하여 실시간 데이터 동기화
+
+              * 캠페인 쓰기 모델 변경 시 읽기 모델을 갱신하고, **검색 색인(ES)을 통해 PLP 필터링을 지원하는 이벤트 연계 구조 구축**
+
+              * **MongoDB 컬렉션에서 캠페인의 기준시간 단위로 데이터 버전이 관리됨에 따라, 저장되는 데이터가 증가할 가능성을 고려하여 조회 성능 최적화를 위해 컬렉션 분리 전략 검토 및 필요 시 샤딩 적용 고려**
               
               * 상품목록 리팩터링 및 읽기 모델로 분리하기 위한 기반 마련. **Thread Pool 구성 및 비동기를 활용한 Composition 방식을 통해** PLP(Product List Page) 조회 시 **p99 기준 Latency 60% 개선 및 안정화**
               
